Add sakuma-drops slides.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,6 +11,7 @@ project:
     - glm.qmd
     - linearmodels.qmd
     - nhst-slide.qmd
+    - sakuma-drops.qmd
 
 website:
   title: "データ解析（研究室用）"
@@ -44,6 +45,7 @@ website:
       - section: 基礎統計学用スライド
         contents:
         - descriptive_statistics-slide.qmd
+        - sakuma-drops.qmd
         - ttest-slide.qmd
         - nhst-slide.qmd
 
