--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,7 +19,7 @@ project:
     - openwater_nep_method.qmd
     - standardize_figures.qmd
     - tic_memo.qmd
-    - "fish-demo*.qmd"
+    - fish-demo01.qmd
 
 website:
   title: "データ解析（研究室用）"
@@ -64,8 +64,7 @@ website:
           href: ttest-slides.qmd
         - text: 3群以上の分析（分散分析）
           href: anova-slides.qmd
-        - text: 藻場にいた魚の解析
-        　href: fish-demo01.qmd
+        - fish-demo01.qmd
       - section: 研究室用
         contents: 
         - openwater_nep_method.qmd
